--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</table>
 
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
-				<form id="form-adiciona">
+				<form id="form-adicional">
 					<div class="grupo">
 						<label for="nome">Nome:</label>
 						<input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
@@ -93,6 +93,7 @@
 			</section>
 		</main>
 
-		<script src="js/principal.js"></script>
+		<script src="js/calcula-imc.js"></script>
+		<script src="js/form.js"></script>
 	</body>
 </html>
