--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<tbody id="tabela-pacientes">
 						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
-							<td class="info-peso">500</td>
+							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
 							<td class="info-gordura">10</td>
 							<td class="info-imc">0</td>
@@ -38,7 +38,7 @@
 
 						<tr class="paciente" >
 							<td class="info-nome">João</td>
-							<td class="info-peso">80</td>
+							<td class="info-peso">-80</td>
 							<td class="info-altura">1.72</td>
 							<td class="info-gordura">40</td>
 							<td class="info-imc">0</td>
@@ -70,6 +70,7 @@
 				</table>
 
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
+				<ul id="mensagens-erro"></ul>
 				<form id="form-adicional">
 					<div class="grupo">
 						<label for="nome">Nome:</label>
