--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 						</tr>
 					</tbody>
 				</table>
+				
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+
+				<button id="buscar-paciente" class="botao bto-principal">Buscar Paciente</button>
 
 				<h2 id="titulo-form">Adicionar novo paciente</h2>
 				<ul id="mensagens-erro"></ul>
@@ -100,5 +104,6 @@
 		<script src="js/form.js"></script>
 		<script src="js/remover-paciente.js"></script>
 		<script src="js/filtra.js"></script>
+		<script src="js/buscar-pacientes.js"></script>
 	</body>
 </html>
